[gd_scene load_steps=3 format=3 uid="uid://c8y5kn7m2p3qr"]

[ext_resource type="Script" path="res://scenes/side_project_panel.gd" id="1_side_project"]
[ext_resource type="Theme" path="res://themes/main_theme.tres" id="2_main_theme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_side_project_panel"]
bg_color = Color(0.08, 0.08, 0.12, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.4, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0.3, 0.3, 0.4, 0.2)
shadow_size = 3
shadow_offset = Vector2(0, 2)

[node name="SideProjectPanel" type="PanelContainer"]
theme = ExtResource("2_main_theme")
theme_override_styles/panel = SubResource("StyleBoxFlat_side_project_panel")
script = ExtResource("1_side_project")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 12

[node name="MainContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="HeaderLabel" type="Label" parent="MarginContainer/MainContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Project Banana"

[node name="ProgressLabel" type="Label" parent="MarginContainer/MainContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Progress: 0%"
